--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,5 +13,8 @@
     "bootstrap": "^5.3.3",
     "express": "^4.21.2",
     "node": "^23.4.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
